fix Java deprecation